e2e test suite + bunch of bugfixes (#351)
Implemented Playwright e2e test suite.
They're mostly agentic-coded with a few review rounds, but it allows us
to introduce new changes more frequently.

## Bugs fixed

All fixes ship with regression coverage — e2e `knownbugs/*Spec`, jest
component tests, or server unit tests — each proven red against the
pre-fix code.

### Consumer session
- **Session-level filter halted the stream** — with a session-level
(merged-stream) filter, loading stopped at the first non-matching
message: the server sent a zero-message response that made the client
throw while reading the trailing counters, killing the stream handler.
Now emits a count-only placeholder, matching the per-target path. —
`server/.../ConsumerSessionRunner.scala` · regression `CS-10s`
- **BUG-4** — play/pause tooltip was always "Start or Resume" regardless
of state (the "Pause" branch was dead code). —
`ConsumerSession/Toolbar/Toolbar.tsx`
- **BUG-5** — "Message Id" and "Ordering key" columns weren't sortable
(the only two headers missing a `sortKey`). — `ConsumerSession.tsx`,
`sort.ts`
- **BUG-6** — Start-From label typo ("Skip **fist** n messages"). —
`StartFromInput.tsx`
- **BUG-15** — Export was enabled while paused with 0 messages
(inconsistent paused-only carve-out). — `ExportMessagesButton.tsx`

### Forms & validation
- **BUG-1** — create/delete forms silently reported success on a
transport failure instead of showing an error and staying on the form;
Delete even showed a green "deleted" toast on a failed delete. Fixed
across 5 sites. — `CreateTenantPage`, `ResourceGroupForm`
(+`DeleteDialog`), `CreateNamespace`, `CreateSubscription`
- **BUG-3** — Create Subscription accepted an empty/invalid "Message
with specific ID" (the guard compared the field value to the literal
string `"messageId"`), silently creating the subscription at *earliest*.
— `CreateSubscription.tsx`

### Library
- **BUG-2** — KeyValueEditor "As JSON" discarded edits (the `onChange`
returned a fun